# AfroPay-Stellar

./: .env.example  CONTRIBUTING.md  Contributorsguiude.md  Documentation.md  IMPLEMENTATION_CHECKLIST.md  KYC_IMPLEMENTATION_CHECKLIST.md  PROJECT_PLAN.md  README.md  Resource.md  TEST_STATUS.md  docker-compose.yml  package-lock.json
.github/workflows/: ci.yml
.kiro/: spec-kyc-aml.md  spec-real-time-transactions.md
apps/api/: Dockerfile  jest.e2e.json  package-lock.json  package.json  tsconfig.e2e.json
apps/frontend/: Dockerfile  TODO.md  package-lock.json  package.json  tailwind.config.js  tsconfig.json
contracts/: .gitignore  README.md
contracts/fee-primitives/: Cargo.toml
contracts/scripts/: deploy.sh  test-harness.sh
deploy/kubernetes/: README.md  api.yaml  configmap.yaml  frontend.yaml  ingress.yaml  migration-job.yaml  namespace.yaml  postgres.yaml  python-analytics.yaml  redis.yaml  rust-worker.yaml  secrets.yaml
docs/: SEP10-Implementation.md  api-reference.md  architecture.md  deployment.md  deterministic-keypair.md  docker-optimization.md  environment-variables.md  fee-primitives.md  integration.md  local-development.md  logging.md  schema-changes.md  secrets-management.md  security.md  soroban-escrow-design.md  trustline-utilities.md
scripts/: deploy-contract.sh  migrate-encryption.ts  setup.sh  validate-env.sh
services/python-analytics/: main.py
services/rust-worker/: Cargo.toml  Dockerfile
services/rust-worker/src/: env.rs  main.rs  metrics.rs  models.rs  queue.rs  stellar.rs  trustline.rs
src/crypto/: deterministic_keypair.rs
(+83 files in other folders)
