[package]
name = "rust-worker"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "worker"
path = "src/main.rs"

[dependencies]
tokio = { version = "1", features = ["full"] }
redis = { version = "0.24", features = ["tokio-comp", "aio"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.11", features = ["json"] }
stellar-base = "0.7"
stellar-horizon = "0.7"
anyhow = "1"
tracing = "0.1"
tracing-subscriber = "0.3"
dotenv = "0.15"
prometheus = "0.14"
warp = "0.3"
once_cell = "1"

[dependencies]
stellar-sdk = "0.4"
sha2 = "0.10"

